--- a/src/main/resources/templates/MyOrder.html
+++ b/src/main/resources/templates/MyOrder.html
@@ -29,7 +29,7 @@
 						<ul>
 							<li class="top-nav01"><a href="/html/login(+html).jsp">Sign In</a></li>
 							<li class="top-nav02"><a href="register_terms/register.html">Join Now</a></li>
-							<li class="top-nav03"><a href="#">My Page</a></li>
+							<li class="top-nav03"><a href="/html/MyPage.html">My Page</a></li>
 						</ul>
 					</nav>
 				</div>
