--- a/src/main/resources/static/css/information2.css
+++ b/src/main/resources/static/css/information2.css
@@ -979,7 +979,7 @@
 		.board_list table{width:100%; font-size:15px;}
 			.board_list table th, .board_list table td{padding:15px 10px;}
 			.board_list table thead{}
-				.board_list table thead th{background:#fff; font-weight:400; border-top:2px solid rgba(0,1,0.1); border-bottom:1px solid rgba(0,1,0.1); text-align:center;}
+				.board_list table thead th{background:#fff; border-top:2px solid rgba(0,1,0.1); border-bottom:1px solid rgba(0,1,0.1); text-align:center;}
 			.board_list table tbody{}
 				.board_list table tbody td{border-bottom:1px solid rgba(0,0,0,0.1);}
 					.board_list table tbody td a{}
