공지사항 추가완료 (html추가하고 매핑수정해야함)

--- a/src/main/resources/templates/Q&A.html
+++ b/src/main/resources/templates/Q&A.html
@@ -421,7 +421,7 @@
 																								<td>
 
 																									<div class="text_wrap">
-																										<div class="text">
+																										<div class="text">								<!--공지사항은 board.noticeTitle 이런식으로 해줘야함 뒤에 ㅇㅇ -->
 																											<a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></a>
 
 																										</div>
