주문내역 기능구현 (이미지제외 데이터조회)

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -208,7 +208,7 @@
 						 </ul>
 						<ul sec:authorize="isAuthenticated()">
 							<li class="top-nav01"><a href="/logout">로그아웃</a></li>
-							<li class="top-nav02"><a href="#">My Page</a></li>
+							<li class="top-nav02"><a href="/mypage">My Page</a></li>
 						</ul>
 					 </nav>
 				</div>
