장바구니 뺴기기능 구현(수정필요)

--- a/src/main/resources/templates/cartDetail.html
+++ b/src/main/resources/templates/cartDetail.html
@@ -11,19 +11,69 @@
 <h1>장바구니</h1>
 <table>
     <tr>
+        <th>
+            <input type="checkbox" id="selectAll" onclick="toggleCheckboxes()">
+        </th>
         <th>상품 이름</th>
         <th>가격</th>
     </tr>
     <!-- 장바구니 아이템 목록을 동적으로 출력 -->
-    <tr th:each="item : ${cartItems}">
+    <tr th:each="item, itemStat : ${cartItems}">
+        <td>
+            <input type="checkbox" name="selectedItems" th:value="${item.id}" class="itemCheckbox" data-item-id="${item.id}">
+        </td>
         <td th:text="${item.menuName}"></td>
         <td th:text="${item.menuPrice}"></td>
     </tr>
 </table>
+<button type="button" id="removeSelectedItems">선택한 메뉴 삭제</button>
 <p>총 가격: <span th:text="${totalPrice}" id="totalPrice"></span></p>
 
 <!-- 결제하기 버튼 추가 -->
 <button id="checkoutButton">결제하기</button>
+
+<script>
+    // 모두 선택 버튼 토글 함수
+    function toggleCheckboxes() {
+        $(".itemCheckbox").prop('checked', $("#selectAll").is(":checked"));
+    }
+
+    // 선택한 메뉴 삭제 함수
+    $("#removeSelectedItems").click(function() {
+        var selectedItems = [];
+        // 선택한 체크박스 아이템을 찾아서 ID를 배열에 추가
+        $(".itemCheckbox:checked").each(function (index) {
+            selectedItems.push(index);
+        });
+
+
+        if (selectedItems.length > 0) {
+            console.log(selectedItems);
+
+            // Ajax 요청을 사용하여 선택한 메뉴 항목 삭제
+            $.ajax({
+                url: "/removeSelectedItems",
+                type: "POST",
+                contentType: "application/json",
+                data: JSON.stringify(selectedItems),
+                success: function (data) {
+                    // 삭제 성공 시, 선택한 메뉴 항목을 테이블에서 제거
+                    $.each(selectedItems, function(index, value) {
+                        // 선택한 메뉴 ID와 일치하는 행을 찾아 제거
+                        $("tr").filter(function() {
+                            return $(this).find(".itemCheckbox").data("item-id") === value;
+                        }).remove();
+                    });
+                },
+                error: function (xhr, textStatus, errorThrown) {
+                    console.log("에러:", errorThrown);
+                }
+            });
+        }
+    });
+</script>
+
+
 
 <script th:inline="javascript">
     const IMP = window.IMP;
