--- a/src/main/resources/templates/MyQ&A.html
+++ b/src/main/resources/templates/MyQ&A.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http:/www.thymeleaf.org" >
 <head>
-<link rel="stylesheet" href="/css/tests.css">
-<link rel="stylesheet" href="/css/style_util.css">
-	<title>글쓰기</title>
+<link rel="stylesheet" href="/css/information.css">
+<link rel="stylesheet" href="/css/information1.css">
+<link rel="stylesheet" href="/css/information2.css">
+<link rel="stylesheet" href="/css/myorder,myQ&A.css">
+	<title>문의내역</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="title" content="메가MGC커피">
@@ -206,7 +208,7 @@
 						<ul>
 							<li class="top-nav01"><a href="/test/login">Sign In</a></li>
 							<li class="top-nav02"><a href="/register">Join Now</a></li>
-							<li class="top-nav03"><a href="#">My Page</a></li>
+							<li class="top-nav03"><a href="/MyPage">My Page</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -422,18 +424,17 @@
 					</div>
 				</div>
 			</div>
-<nav class="ms_nav" id="msRnb" >					
+<nav class="ms_nav" id="msRnb" style="line-height: 1.0;" >					
 	<ul>
 		<li>
-			<a href="http://localhost:8080/jsp/My%EC%BF%A0%ED%8F%B0.html">My 쿠폰<span class="sbox_arrow_down"></span></a>
+			<a href="../mypage/mypage.html">My 쿠폰<span class="sbox_arrow_down"></span></a>
 		</li>
 
-		<li class="msRnb_btn"><a href="http://localhost:8080/jsp/%EC%A3%BC%EB%AC%B8%EB%82%B4%EC%97%AD.html" required="login" data-href="/my/calendar.do">주문내역</a></li>
-		<!-- <li class="msRnb_btn"><a href="/my/drink_shop.do" required="login">My 음료/매장</a></li> -->
-		<li class="msRnb_btn"><a href="http://localhost:8080/jsp/%EB%AC%B8%EC%9D%98%EB%82%B4%EC%97%AD.html" required="login" data-href="/my/my_menu.do">문의내역</a></li>
+		<li class="msRnb_btn"><a href="../mypage/myorder.html" required="login" data-href="/my/calendar.do">주문내역</a></li>
+		<li class="msRnb_btn"><a href="../mypage/myQ&A.html" required="login" data-href="/my/my_menu.do">문의내역</a></li>
 
 		<li>
-			<a href="http://localhost:8080/jsp/%EA%B0%9C%EC%9D%B8%EC%A0%95%EB%B3%B4%EC%88%98%EC%A0%95.html">개인정보수정<span class="sbox_arrow_down"></span></a>
+			<a href="../mypage/information.html">개인정보수정<span class="sbox_arrow_down"></span></a>
 
 		</li>
 	</ul>
