--- a/src/main/resources/templates/MyPage.html
+++ b/src/main/resources/templates/MyPage.html
@@ -59,12 +59,13 @@
 					<div id="ham-menu-wrap">
 						<div class="ham-menu mt-5">
 							<ul class="ham-top-menu">
-								<li><a href="/html/aboutus.html">ABOUT US<i class="bi bi-caret-down-fill"></i></a>
-									<ul class="ham-sub-menu">
-										<li><a href="../menu/menu(drink).html">MENU</a></li>
-										<li><a href="../store/store.html">STORE</a></li>
-										<li><a href="../partnership/partnership.html">PARTNERSHIP</a></li>
-										<li><a href="../notice,Q&A/notice.html">NEWS</a></li>
+								<li>
+									<a href="../brand/brand.html">ABOUT US<i class="bi bi-caret-down-fill"></i></a>
+										<ul class="ham-sub-menu">
+											<li><a href="../menu/menu(drink).html">MENU</a></li>
+											<li><a href="../store/store.html">STORE</a></li>
+											<li><a href="../partnership/partnership.html">PARTNERSHIP</a></li>
+											<li><a href="../notice,Q&A/notice.html">NEWS</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -286,13 +287,9 @@
 					<div class="cont_text_wrap">
 						<div class="cont_text cont_list_map">
 							<ul>
-								<li>
-									HOME
-								</li>
-								<li>
-									My Page								</li>
-								<li>
-									My Page								</li>
+								<li>HOME</li>
+								<li>My Page</li>
+								<li>My Page</li>
 							</ul>
 						</div>
 					</div>
@@ -360,17 +357,10 @@
 
 <nav class="ms_nav" id="msRnb" style="line-height: 1.0;" >					
 	<ul>
-		<li>
-			<a href="../mypage/mypage.html">My 쿠폰<span class="sbox_arrow_down"></span></a>
-		</li>
-
+		<li><a href="../mypage/mypage.html">My 쿠폰<span class="sbox_arrow_down"></span></a></li>
 		<li class="msRnb_btn"><a href="../mypage/myorder.html" required="login" data-href="/my/calendar.do">주문내역</a></li>
 		<li class="msRnb_btn"><a href="../mypage/myQ&A.html" required="login" data-href="/my/my_menu.do">문의내역</a></li>
-
-		<li>
-			<a href="../mypage/information.html">개인정보수정<span class="sbox_arrow_down"></span></a>
-
-		</li>
+		<li><a href="../mypage/information.html">개인정보수정<span class="sbox_arrow_down"></span></a></li>
 	</ul>
 </nav>
                 </div>
