확인필요/매핑x

--- a/src/main/resources/templates/MyQ&AA.html
+++ b/src/main/resources/templates/MyQ&AA.html
@@ -60,7 +60,7 @@
 					<div id="ham-menu-wrap">
 						<div class="ham-menu mt-5">
 							<ul class="ham-top-menu">
-								<li><a href="/html/aboutus.html">ABOUT US<i class="bi bi-caret-down-fill"></i></a>
+								<li><a href="../brand/brand.html">ABOUT US<i class="bi bi-caret-down-fill"></i></a>
 									<ul class="ham-sub-menu">
 										<li><a href="../menu/menu(drink).html">MENU</a></li>
 										<li><a href="../store/store.html">STORE</a></li>
