--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -301,8 +301,8 @@
 						<div class="swiper-container section_main_swiper section_main_swiper1 swiper-container-initialized swiper-container-horizontal">
 							<ul class="swiper-wrapper">
 												<li class="swiper-slide swiper-slide-active">
-													<div class="swiper-slide_img swiper-slide_img_pc" style="background:url(/image/main1.png;)"></div>
-													<div class="swiper-slide_img swiper-slide_img_m" style="background:url(/image/main2.png;)"></div>
+													<div class="swiper-slide_img swiper-slide_img_pc" style="background:url(/image/main1.png)"></div>
+													<div class="swiper-slide_img swiper-slide_img_m" style="background:url(/image/main1.png)"></div>
 													<div class="section_middle">
 														<div class="cont_boxs">
 															<div class="cont_title_wrap section_main_fade animation_fade_up animation01 animated fadeInUp aos-init aos-animate" data-aos="fade-up" data-aos-delay="0">
@@ -318,8 +318,8 @@
 													</div>
 												</li>
 												<li class="swiper-slide swiper-slide-next">
-													<div class="swiper-slide_img swiper-slide_img_pc" style="background:url(/image/main3.png;)"></div>
-													<div class="swiper-slide_img swiper-slide_img_m" style="background:url(/image/main4.png;)"></div>
+													<div class="swiper-slide_img swiper-slide_img_pc" style="background:url(/image/main2.png)"></div>
+													<div class="swiper-slide_img swiper-slide_img_m" style="background:url(/image/main2.png)"></div>
 													<div class="section_middle">
 														<div class="cont_boxs">
 															<div class="cont_title_wrap section_main_fade animation_fade_up animation01 animated fadeInUp aos-init aos-animate" data-aos="fade-up" data-aos-delay="0">
