--- a/src/main/resources/templates/MyQ&AA.html
+++ b/src/main/resources/templates/MyQ&AA.html
@@ -20,7 +20,7 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="main.html">
-						<img src="image/logo.png" class="head_logo_img_fixed">
+						<img src="/image/logo.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
@@ -38,7 +38,7 @@
 					<ul>
 						<li>
 							<a href="#">
-								<img src="image/basket.png" class="icon_basket_img_fixed">
+								<img src="/image/basket.png" class="icon_basket_img_fixed">
 							</a>
 						</li>
 					</ul>
@@ -448,7 +448,7 @@
 					</ul>
 				</div>
 				<div class="foot_logo">
-					<img class="foot_logo" src="image/logo.png" alt="Logo">
+					<img class="foot_logo" src="/image/logo.png" alt="Logo">
 				</div>
 				<div class="foot_cont">
 					<ul>
