--- a/src/main/resources/templates/MyOrder.html
+++ b/src/main/resources/templates/MyOrder.html
@@ -5,10 +5,10 @@
 	<title>주문내역</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" href="information.css">
-	<link rel="stylesheet" href="information1.css">
-	<link rel="stylesheet" href="information2.css">
-	<link rel="stylesheet" href="myorder,myQ&A.css">
+	<link rel="stylesheet" href="/css/information.css">
+	<link rel="stylesheet" href="/css/information1.css">
+	<link rel="stylesheet" href="/css/information2.css">
+	<link rel="stylesheet" href="/css/myorder,myQ&A.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;600;700;900&display=swap">
